# ros-noetic-study

./: README.md  pose_listener.py
maps/: corridor_map.pgm  corridor_map.yaml
src/: all_topics.bag  cmd_only.bag  day03.md  my_turtle.bag  my_turtle.bag.active
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: service.launch
src/beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py  calc_server.py  change_pen_client.py  counter_even_sub.py  counter_pub.py  counter_sub.py  listener.py  string_length_client.py  string_length_server.py  talker.py  temp_pub.py  temp_sub.py  turtle_circle.py  turtle_monitor.py
src/diff_wheeled_robot_gazebo/config/: laser_filter.yaml
src/diff_wheeled_robot_gazebo/launch/: city_multi_robot.launch  diff_wheeled_corridor.launch  diff_wheeled_gazebo_with_laser.launch  diff_wheeled_test2.launch  gmapping.launch
src/diff_wheeled_robot_gazebo/maps/: test2.pgm  test2.yaml
src/diff_wheeled_robot_gazebo/worlds/: city_block.world  corridor.world  pillar_world.world  test2.world
src/mastering_ros_robot_description_pkg/launch/: gazebo_mobile_robot.launch
src/mastering_ros_robot_description_pkg/urdf/: diff_wheeled_robot_with_laser.xacro
src/my_tutorial/: CMakeLists.txt  package.xml
src/my_tutorial/launch/: color_turtle.launch  full_turtle.launch  multi_turtle.launch  my_tutorial.launch
src/my_tutorial/scripts/: publisher.py  subscriber.py
src/obstacle_avoidance/: package.xml
src/obstacle_avoidance/scripts/: avoid_obstacle.py
src/wall_follower/: package.xml
(+3 files in other folders)
